    and q₃ can be merged (taking the union of their outgoing
    transitions).  This is cheap function is automatically called by
    spot::translate() after translation of a formula to GBA, before
    further simplification.  This was introduced to help with automata
    produced from formulas output by "genltl --eil-gsi" (see above).

  - spot::postproc has new configuration variable branch-post that
    can be used to control the use of branching-postponement (diabled
    by default) or delayed-branching (see above, enabled by default).
    See the spot-x(7) man page for details.

  - spot::parallel_policy is an object that can be passed to some
    algorithm to specify how many threads can be used if Spot has been
    compiled with --enable-pthread.  Currently, only
    twa_graph::merge_states() supports it.

 Python bindings:

  - The to_str() method of automata can now export a parity game into
    the PG-Solver format by passing option 'pg'.  See
    https://spot.lrde.epita.fr/ipynb/games.html for an example.

 Deprectation notice:

  - spot::pg_print() has been deprecated in favor of spot::print_pg()
    for consistency with the rest of the API.

  Bugs fixed:

  - calling twa_graph::new_univ_edge(src, begin, end, cond, acc) could
    produce unexpected result if begin and end where already pointing
    into the universal edge vector, since the later can be
    reallocated during that process.

  - Printing an alternating automaton with print_dot() using 'u' to
    hide true state could produce some incorrect GraphViz output if
    the automaton as a true state as part of a universal group.

  - Due to an optimization introduces in 2.10 to parse HOA label more
    efficiently, the automaton parser could crash when parsing random
    input (not HOA) containing '[' (issue #509).

New in spot 2.10.6  (2022-05-18)

  Bugs fixed:

  - Fix compilation error on MacOS X.

  - Using -Ffile/N to read column N of a CSV file would not reset the